<resources>

    <string name="app_name">百度地图</string>
    <string name="username">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
     <string name="action_settings">Settings</string>
    <string name="accout">请输入用户名</string>
    <string name="repeatpassword">RepeatPassword</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="title">标题</string>
    <string name="save">保存</string>
    <string name="content">内容</string>
    <string name="logintheme">用户登录</string>
    <string name="rememuser">记住账号</string>
    <string name="remempass">记住密码</string>
    <string name="registtheme">注册账户</string>
    <string name="cancel">取消</string>
    <string name="confimpassword">确认密码</string>

</resources>
