<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
                android:id="@+id/registtheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="50dp"
                android:text="@string/registtheme"
                android:textSize="50sp"
                android:textStyle="italic"
                android:typeface="serif" />
        
        <RelativeLayout
            android:id="@+id/registPanel"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:paddingBottom="50dp"
            android:layout_below="@id/registtheme"
            android:background="@drawable/background_login_div"
            android:orientation="vertical" >

            

            <LinearLayout
                android:id="@+id/usernamePanel"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@id/myappname"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:paddingLeft="30dp"
                    android:text="@string/username"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/user"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="username"
                    android:padding="15dp"
                    android:paddingLeft="100dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordPanel"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@id/usernamePanel"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/pas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:paddingLeft="30dp"
                    android:text="@string/password"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="password"
                    android:padding="15dp"
                    android:paddingLeft="150dp" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/confirmPanel"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@id/passwordPanel"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/con"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:paddingLeft="30dp"
                    android:text="@string/confimpassword"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/confirmpass"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="confirm password"
                    android:padding="15dp"
                    android:paddingLeft="150dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/radioPanel"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@id/confirmPanel"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:paddingLeft="30dp"
                    android:text="性别"
                    android:textSize="20dp" />
                <RadioGroup 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="男" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="女" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonPanel"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@id/radioPanel"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/loginbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dip"
                    android:background="@drawable/background_button_div"
                    android:paddingLeft="50dip"
                    android:paddingRight="50dip"
                    android:text="@string/regist"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="    " />

                <Button
                    android:id="@+id/cancelbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dip"
                    android:background="@drawable/background_button_div"
                    android:paddingLeft="50dip"
                    android:paddingRight="50dip"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white" />
            </LinearLayout>
 <!--  -->
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>